syntax = "proto3";
option java_package = "io.xpring.proto";

package io.xpring;

import "account_info.proto";
import "get_account_info_request.proto";
import "get_fee_request.proto";
import "submit_signed_transaction_request.proto";
import "submit_signed_transaction_response.proto";
import "fee.proto";

import "tx_request.proto";
import "tx_response.proto";

import "ledger_sequence_request.proto";
import "ledger_sequence_response.proto";

// RPCs available to interact with the XRP Ledger.
service XRPLedgerAPI {
  // Get account info for an account on the XRP Ledger.
  rpc GetAccountInfo (GetAccountInfoRequest) returns (AccountInfo);

  // Get the fee for a transaction on the XRP Ledger.
  rpc GetFee (GetFeeRequest) returns (FeeResponse);

  // Submit a signed transaction to the XRP Ledger.
  rpc SubmitSignedTransaction (SubmitSignedTransactionRequest) returns (SubmitSignedTransactionResponse);

  // Get the status of a transaction
  rpc Tx(TxRequest) returns (TxResponse);

  // Get most recently validated ledger sequence
  rpc LedgerSequence(LedgerSequenceRequest) returns (LedgerSequenceResponse);
}
